Update profile image source in index.html

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
         <div class="row align-items-center justify-content-center gy-4">
           <div class="col-lg-4 text-center">
-            <img src="assets\img\Moibarcopie4.jpg" class="img-fluid rounded-circle mx-auto" alt="Photo de profil" style="max-width:200px;">
+            <img src="assets\img\Moibarcopie4_v2.jpg" class="img-fluid rounded-circle mx-auto" alt="Photo de profil" style="max-width:200px;">
           </div>
           <div class="col-lg-8 content text-start text-lg-start">
             <h2>Étudiant en Réseaux & Télécommunications</h2>
