Correction faute d'orthographe

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
           <div class="col-lg-8 content text-start text-lg-start">
             <h2>Étudiant en Réseaux & Télécommunications</h2>
             <p class="fst-italic py-3">
-              Actuellement étudiant à l’IUT de Béthune, j'étudie les réseaux, les systèmes informatiques et la télécommunications. Issu d’un baccalauréat technologique, je souhaite développer mes compétences techniques et humaines afin de construire une carrière solide dans le domaine du numérique.
+              Actuellement étudiant à l’IUT de Béthune, j'étudie les réseaux, les systèmes informatiques et les télécommunications. Issu d’un baccalauréat technologique, je souhaite développer mes compétences techniques et humaines afin de construire une carrière solide dans le domaine du numérique.
             </p>
 
             <div class="row">
@@ -127,7 +127,7 @@
 
             <div class="resume-item pb-0">
               <h4>ÉTUDIANT EN RÉSEAUX ET TÉLÉCOMMUNICATIONS</h4>
-              <p><em>Actuellement en 1ère année de BUT à l'IUT de Béthune, je recherche a mettre en pratique mes connaissances techniques et découvrir le monde professionnel du numérique.</em></p>
+              <p><em>Actuellement en 1ère année de BUT à l'IUT de Béthune, je recherche à mettre en pratique mes connaissances techniques et découvrir le monde professionnel du numérique.</em></p>
               <ul>
                 <li>Armentières</li>
                 <li>Permis B</li>
@@ -138,7 +138,7 @@
 
             <h3 class="resume-title">FORMATION</h3><br>
             <div class="resume-item">
-              <h4>2024 BUT Réseaux et Télécommunications (R&T)</h4>
+              <h4>2025 BUT Réseaux et Télécommunications (R&T)</h4>
               <h5>IUT de Béthune, Université d'Artois</h5>
               <p><em>Apprentissage des bases des réseaux, de la cybersécurité et de la programmation.</em></p>
               <br>
@@ -148,7 +148,7 @@
               <h4>Baccalauréat STI2D <br> (Sciences et Technologies de l'Industrie et du Développement Durable)</h4>
               <h5>2021 - 2024</h5>
               <p><em>Lycée Gustave Eiffel Armentières</em></p>
-              <p>Spécialité SIN avec Obtention du diplôme.</p>
+              <p>Spécialité SIN (Systèmes d'Information et Numérique) avec Obtention du diplôme.</p>
             </div><!-- Edn Resume Item -->
 
           </div>
@@ -161,9 +161,9 @@
               <p><em>Altavia Wetail - Molinel, Lille </em></p>
               <ul>
                 <li>Découverte du milieu industriel et de la chaîne de production.</li>
-                <li>Apprentissage des étapes de réalisation de supports publicitaires</li>
+                <li>Apprentissage des étapes de réalisation de supports publicitaires.</li>
                 <li>Initiation à la gestion d'un réseau local et à l'assistance utilisateur.</li>
-                <li>Découverte du monde professionnel et de la vie en Entreprise</li>
+                <li>Découverte du monde professionnel et de la vie en entreprise.</li>
               </ul>
               <br>
             </div><!-- Edn Resume Item -->
@@ -171,7 +171,7 @@
             <div class="resume-item">
               <h4>Compétences techniques</h4>
               <h5>informatique</h5>
-              <p><em>Notions en réseaux & Maintenance informatique.</em></p>
+              <p><em>Notions en réseaux & maintenance informatique.</em></p>
               <h5>Langues</h5>
               <p><em>Anglais (Niveau B1/B2)</em></p>
               <h5>Technologie</h5>
@@ -224,7 +224,7 @@
                   <li>En choisissant les solutions et technologies réseaux adaptées.</li>
                   <li>En respectant les principes fondamentaux de la sécurité informatique.</li>
                   <li>En utilisant une approche rigoureuse pour la résolution des dysfonctionnements.</li>
-                  <li>En respectant les règles métiers</li>
+                  <li>En respectant les règles métiers.</li>
                   <li>En assurant une veille technologique.</li>
                   <a href="Administrer-details.html" class="details-link">Détails de la compétence <i class="bi bi-arrow-right"></i></a>
                 </div>
