Fix grammatical issues in Credits.html
Corrected grammatical errors in French text.

--- a/Credits.html
+++ b/Credits.html
@@ -22,7 +22,6 @@
   <link href="assets/css/main.css" rel="stylesheet">
 
   <style>
-    /* Ajustement spécifique pour cette page afin de centrer le contenu verticalement */
     body {
       display: flex;
       flex-direction: column;
@@ -63,8 +62,8 @@
       
       <div class="mb-5">
         <p>Images utilisées dans le site : <a href="https://www.pexels.com/">Pexels</a> et <a href="https://fr.freepik.com/">Freepik</a></p>
-        <p>Les images non référencées proviennent d'autres sites qui ne retrace pas le crédit ou on été généré par IA.</p>
-        <p>La personne a l'origine du template BootstrapMade sur lequel repose se site est <strong>Alex Smith</strong>.</p>
+        <p>Les images non référencées proviennent d'autres sites qui ne retracent pas le crédit ou ont été générées par IA.</p>
+        <p>La personne à l'origine du template BootstrapMade sur lequel repose ce site est <strong>Alex Smith</strong>.</p>
         <p>Lien vers le template original : <a href="https://bootstrapmade.com/free-html-bootstrap-template-my-resume/" target="_blank" rel="noopener">Template Original</a></p>
         <p>Ce site a été conçu dans le cadre d'un projet académique à l'IUT de Béthune.</p> <br>
         <a href="index.html" class="back-btn text-decoration-none"><i class="bi bi-arrow-left me-2"></i>Retour à l'accueil</a>
