--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
 
     <nav id="navmenu" class="navmenu">
       <ul>
-        <li><a href="#hero" class="active"><i class="bi bi-house navicon"></i><span>Hey !</span></a></li>
-        <li><a href="#about"><i class="bi bi-person navicon"></i><span>About Me</span></a></li>
+        <li><a href="#hero" class="active"><i class="bi bi-house navicon"></i><span>Accueil</span></a></li>
+        <li><a href="#about"><i class="bi bi-person navicon"></i><span>Moi</span></a></li>
         <li><a href="#resume"><i class="bi bi-file-earmark-text navicon"></i><span>CV</span></a></li>
         <li><a href="#portfolio"><i class="bi bi-images navicon"></i><span>Portfolio</span></a></li>
         <li><a href="#Credits"><i class="bi bi-envelope navicon"></i><span>Credits</span></a></li>
@@ -302,7 +302,9 @@
           </div>
 
   <section id="Credits" class="Credits section">
-    <a href="Credits.html"class="details-link">Crédits</a>
+    <a href="Credits.html"class="details-link">-> Crédits <-</a>
+  </section>
+
 
   <!-- Scroll Top -->
   <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
